--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   }
 }
 
-.outerWrapperSmall{
+.outerWrapperSmall {
   display: flex;
   line-height: 1.4;
   flex-direction: row;
@@ -41,14 +41,14 @@
   width: 360px;
 }
 
-.innerWrapperSmall{
+.innerWrapperSmall {
   overflow: hidden;
   padding-bottom: 100%;
-  height:0;
+  height: 0;
   width: 100%;
 }
 
-.imgWrapperSmall{
+.imgWrapperSmall {
   overflow: hidden;
   flex: 1;
   width: 100%;
@@ -57,7 +57,7 @@
   align-items: center;
 }
 
-.image{
+.image {
   width: 100%;
   height: 100%;
   background: no-repeat center;
@@ -66,8 +66,8 @@
   padding-bottom: 100%;
 }
 
-.textWrapperSmall{
-  flex:2;
+.textWrapperSmall {
+  flex: 2;
   width: 100%;
   overflow: hidden;
   text-align: left;
@@ -76,7 +76,7 @@
   font-size: 10px;
 }
 
-.wrapperLarge{
+.wrapperLarge {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -85,8 +85,8 @@
   width: 100%;
   line-height: 1.4;
   font-weight: 400;
-  font-size: 15px;
-  color: #000;
+  font-size: 12px;
+  color: grey;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   -ms-hyphens: auto;
@@ -95,109 +95,105 @@
   overflow-wrap: break-word;
 }
 
-.imgWrapperLarge{
+.imgWrapperLarge {
   height: 80%;
   overflow: hidden;
   position: relative;
   width: 100%;
 }
 
-.textWrapperLarge{
+.textWrapperLarge {
   padding: 16px 20px;
   line-height: 1.4;
   color: #000;
   font-size: 13px;
 }
 
-.textAlignLeft{
+.textAlignLeft {
   text-align: left;
 }
 
-.siteNameLinkWrapper{
+.siteNameLinkWrapper {
   max-height: 2.8em;
   color: #000;
   font-weight: 700;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
-
-
-@media (min-width: 360px){
-  .siteNameLinkWrapper{
+@media (min-width: 360px) {
+  .siteNameLinkWrapper {
     font-size: 14px;
   }
-  .responsiveVideo{
+  .responsiveVideo {
     min-height: 202px;
   }
 }
 
-@media (min-width: 460px){
+@media (min-width: 460px) {
   .textWrapperLarge {
     font-size: 14px;
   }
   .textWrapperSmall {
     font-size: 12px;
   }
-  .siteNameLinkWrapper{
+  .siteNameLinkWrapper {
     font-size: 15px;
   }
-  .wrapperLarge{
+  .wrapperLarge {
     max-width: 400px;
   }
-  .outerWrapperSmall{
+  .outerWrapperSmall {
     min-width: 360px;
     width: 360px;
   }
-  .responsiveVideo{
+  .responsiveVideo {
     min-height: 258px;
   }
 }
 
-@media (min-width: 600px){
+@media (min-width: 600px) {
   .textWrapperLarge {
     font-size: 15px;
   }
   .textWrapperSmall {
     font-size: 13px;
   }
-  .siteNameLinkWrapper{
-    font-size: 17px;
+  .siteNameLinkWrapper {
+    font-size: 15px;
   }
-  .wrapperLarge{
+  .wrapperLarge {
     max-width: 600px;
   }
-  .outerWrapperSmall{
+  .outerWrapperSmall {
     min-width: 600px;
     width: 600px;
   }
-  .responsiveVideo{
+  .responsiveVideo {
     min-height: 337px;
   }
 }
 
-
-
-.responsiveImage{
+.responsiveImage {
   width: 100%;
   height: auto;
   border-radius: 5px;
 }
 
-.responsiveVideo{
+.responsiveVideo {
   width: 100%;
   height: auto;
   border-radius: 5px;
 }
 
-.coloredStar{
+.coloredStar {
   color: orange;
 }
 
-.greyText{
+.greyText {
   color: gray;
 }
 
-.priceText{
+.priceText {
   font-size: large;
   font-weight: 600;
 }
